Closed Bug 240449 Opened 22 years ago Closed 22 years ago

Infinite loop in DocumentViewerImpl::CreateStyleSet

Categories

(Core :: XUL, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: dveditz, Assigned: dveditz)

Details

(Keywords: fixed1.7, regression)

Attachments

(1 file)

Found infinite loop in DocumentViewerImpl::CreateStyleSet while testing an extension, introduced by fix to bug 233160
Attached patch fixSplinter Review
Attachment #146059 - Flags: superreview?(dbaron)
Attachment #146059 - Flags: review?(bsmedberg)
Would really like this simple fix in 1.7
Flags: blocking1.7?
Comment on attachment 146059 [details] [diff] [review] fix Preapproving for 1.7. Sorry, I followed dbaron's code review, and I should have read more context and seen this one. /be
Attachment #146059 - Flags: approval1.7+
Flags: blocking1.7? → blocking1.7+
Attachment #146059 - Flags: superreview?(dbaron) → superreview+
Attachment #146059 - Flags: review?(bsmedberg) → review+
/cvsroot/mozilla/content/base/src/nsDocumentViewer.cpp,v new revision: 1.365.2.1; previous revision: 1.365 /cvsroot/mozilla/content/base/src/nsDocumentViewer.cpp,v new revision: 1.367; previous revision: 1.366 Fix checked into trunk and 1.7 branch
Status: NEW → RESOLVED
Closed: 22 years ago
Keywords: fixed1.7
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: