bug 240449 infinite loop tickled by some skins, r=bsmedberg, sr=dbaron, a=brendan